# http-mailer

./: Cargo.toml  README.md
src/: error.rs  main.rs
